<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="1dp"
    app:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/video_thumbnail"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_video" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/play_video"
            android:paddingBottom="40dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_play" />

        <ImageView
            android:id="@+id/video_hd"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/video_thumbnail"
            android:layout_alignRight="@+id/video_thumbnail"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/hd"
            android:paddingEnd="12dp"
            android:paddingLeft="0dp"
            android:paddingRight="12dp"
            android:paddingStart="0dp"
            android:paddingTop="8dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_hd" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/video_thumbnail"
            android:background="#9b000000"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp">

            <TextView
                android:id="@+id/video_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:text="Official Teaser Trailer" />

            <TextView
                android:id="@+id/video_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textSize="13sp"
                tools:text="Trailer" />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>