<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/details_appbar"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.SubtitleCollapsingToolbarLayout
            android:id="@+id/details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:fixMenuPadding="true"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">

            <ImageView
                android:id="@+id/details_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop_image_content_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder_backdrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.4" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="top|start"
                app:layout_collapseMode="pin"
                android:layout_gravity="top|start"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </android.support.design.widget.SubtitleCollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/details_refresh_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <android.support.v7.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="12dp"
                            app:cardCornerRadius="1dp"
                            app:cardElevation="6dp">

                            <ImageView
                                android:id="@+id/details_poster"
                                android:layout_width="wrap_content"
                                android:layout_height="200dp"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/default_poster_content_description"
                                android:scaleType="centerCrop"
                                android:src="@drawable/placeholder_poster" />

                        </android.support.v7.widget.CardView>

                        <TextView
                            android:id="@+id/details_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-light"
                            android:gravity="end"
                            android:textSize="14sp"
                            tools:text="Feb 2017" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:paddingEnd="0dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="0dp"
                        android:paddingStart="4dp"
                        android:paddingTop="24dp">

                        <TextView
                            android:id="@+id/details_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:fontFamily="sans-serif-light"
                            android:textSize="18sp"
                            tools:text="2 hours  30 minutes" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                                android:id="@+id/details_rating_bar"
                                style="@style/Widget.MaterialRatingBar.RatingBar"
                                android:layout_width="112dp"
                                android:layout_height="24dp"
                                android:isIndicator="true"
                                android:numStars="5"
                                android:stepSize="0.1"
                                app:mrb_fillBackgroundStars="true" />

                            <TextView
                                android:id="@+id/details_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="4dp"
                                android:fontFamily="sans-serif-light"
                                android:textSize="14sp"
                                tools:text="2.4 / 5.0" />

                        </LinearLayout>

                        <FrameLayout
                            android:id="@+id/details_adult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="36dp"
                            android:layout_marginStart="36dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/border"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/adult"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:gravity="center_horizontal"
                                android:paddingBottom="8dp"
                                android:paddingEnd="16dp"
                                android:paddingStart="16dp"
                                android:paddingTop="8dp"
                                android:text="@string/adult"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </FrameLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/plot_synopsis"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/details_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingMultiplier="1.2"
                    android:textSize="16sp"
                    tools:text="When a feisty little fox named Tod is adopted into a farm family, he quickly becomes friends with a fun and adorable hound puppy named Copper. Life is full of hilarious adventures until Copper is expected to take on his role as a hunting dog -- and the object of his search is his best friend!" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/genres"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.flexbox.FlexboxLayout
                        android:id="@+id/details_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:alignContent="stretch"
                        app:alignItems="stretch"
                        app:flexDirection="row"
                        app:flexWrap="wrap"
                        app:showDivider="end" />

                    <TextView
                        android:id="@+id/details_available_genres"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/no_data_available"
                        android:textSize="14sp"
                        android:visibility="gone" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/videos"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/details_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:text="@string/play_in_app"
                        android:textColor="@android:color/secondary_text_dark"
                        app:switchPadding="8dp"
                        android:theme="@style/SwitchTheme"
                        android:checked="true"
                        app:trackTint="@color/cardview_dark_background" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/details_videos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false" />

                    <TextView
                        android:id="@+id/details_available_videos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="24dp"
                        android:layout_marginTop="24dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/no_videos_available"
                        android:textSize="14sp"
                        android:visibility="gone" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/reviews"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="1dp"
                    app:cardElevation="3dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/details_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false" />

                        <TextView
                            android:id="@+id/details_available_reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginBottom="24dp"
                            android:layout_marginTop="24dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/no_reviews_available"
                            android:textSize="14sp"
                            android:visibility="gone" />

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/details_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:backgroundTint="@color/cardview_dark_background"
        app:layout_anchor="@id/details_appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_favourite_border" />

</android.support.design.widget.CoordinatorLayout>
